<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!--it will be right :Kul'baka-->
    <groupId>org.Kulbaka.Alexander</groupId>
    <artifactId>example</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <developers>
        <developer>
            <name>Kul'baka Alex</name>
            <organization>home</organization>
            <email>todo: add actual email</email>
            <timezone>UTC +2</timezone>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <description>code example project</description>
    <url>todo: add ref on git</url>

    <modules>
        <module>application</module>
        <module>persistence</module>
        <module>service</module>
        <module>presentation</module>
        <module>admin</module>
        <module>rest</module>
        <module>manager</module>
    </modules>

    <properties>
        <!--values-->
        <java.version>11</java.version>
        <embedded.tomcat7.maven.plugin.PORT>9999</embedded.tomcat7.maven.plugin.PORT>
        <embedded.tomcat7.maven.plugin.PATH>/example</embedded.tomcat7.maven.plugin.PATH>
        <uberjar.name>uberjar</uberjar.name>
        <!--plugins-->
        <embedded.tomcat7.maven.plugin.version>2.2</embedded.tomcat7.maven.plugin.version>
        <embedded.jetty.maven.plugin.version>9.4.14.v20181114</embedded.jetty.maven.plugin.version>
        <primefaces.maven.jsf.plugin.version>1.3.2</primefaces.maven.jsf.plugin.version>
        <!--<maven.surefire.plugin.version>3.0.0-M3</maven.surefire.plugin.version>-->
        <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
        <maven.build.war.plugin.version>2.6</maven.build.war.plugin.version>
        <!--dependencies-->
        <junit.version>4.13.1</junit.version>
        <jersey.version>2.28</jersey.version>
        <google.guava.version>23.0</google.guava.version>
        <checker.framework.version>2.3.2</checker.framework.version>
        <jax.rs.version>2.1</jax.rs.version>
        <log4j.version>2.11.1</log4j.version>
        <slf4j.version>1.7.25</slf4j.version>
        <apache.commons.lang3.version>3.8.1</apache.commons.lang3.version>
        <powermock-mockito.version>1.7.4</powermock-mockito.version>
        <powermock-module-junit4.version>2.0.0</powermock-module-junit4.version>
        <jmockit.version>1.21</jmockit.version>
        <hibernate.version>5.4.1.Final</hibernate.version>
        <apache.derby.version>10.14.2.0</apache.derby.version>
        <hsqldb.version>2.4.0</hsqldb.version>
        <h2.version>1.4.197</h2.version>
        <xerial.sqlite.jdbc.version>3.25.2</xerial.sqlite.jdbc.version>
        <jaxb.version>2.2.11</jaxb.version>
        <activation.version>1.1.1</activation.version>
        <c3p0.connection.pool.version>0.9.1.2</c3p0.connection.pool.version>
        <javax.el.api.version>3.0.0</javax.el.api.version>
        <hikari.connection.pool.version>3.2.0</hikari.connection.pool.version>
        <swagger.jerset2.version>1.5.22</swagger.jerset2.version>
        <jersey.guava.version>2.25.1</jersey.guava.version>
        <apache-shiro.version>1.4.0</apache-shiro.version>
        <commons.logging.version>1.2</commons.logging.version>
        <byte.buddy.version>1.9.10</byte.buddy.version>
        <commons.beanutils.version>1.9.3</commons.beanutils.version>
        <mockito.core.version>2.7.19</mockito.core.version>
        <primefaces.themes.bootstrap.version>1.0.10</primefaces.themes.bootstrap.version>
        <jboss.weld.servlet.version>2.2.14.Final</jboss.weld.servlet.version>
        <jboss.jandex.version>2.0.0.Final</jboss.jandex.version>
        <javax.enterprise.cdi.api.version>1.2</javax.enterprise.cdi.api.version>
        <javax.servlet.api.version>3.1.0</javax.servlet.api.version>
        <org.primefaces.version>6.2</org.primefaces.version>
        <glassfish.javax.faces.version>2.3.3</glassfish.javax.faces.version>
        <javax.inject.version>1</javax.inject.version>
        <jakarta.annotation.api.version>1.3.4</jakarta.annotation.api.version>
        <jmh.version>1.19</jmh.version>
        <javax.el.version>3.0.1-b08</javax.el.version>
        <classpath.scanner.version>2.9.3</classpath.scanner.version>
        <project.lombok.version>1.18.6</project.lombok.version>
        <powermock.api.mockito.version>1.7.0RC4</powermock.api.mockito.version>
        <mysql.connector.version>8.0.15</mysql.connector.version>
        <!--classpath scanners-->
        <reflections.version>0.9.11</reflections.version>
        <corn.classpath.scanner.version>1.1.10</corn.classpath.scanner.version>
        <eu.infomas.annotation.detector.version>3.0.5</eu.infomas.annotation.detector.version>
        <io.github.classpathgraph.version>4.8.25</io.github.classpathgraph.version>
    </properties>

    <dependencies>
        <!--JMH-->
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-core</artifactId>
            <version>${jmh.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-generator-annprocess</artifactId>
            <version>${jmh.version}</version>
            <scope>provided</scope>
        </dependency>
        <!--classpath Scanner-->
        <dependency>
            <groupId>io.github.lukehutch</groupId>
            <artifactId>fast-classpath-scanner</artifactId>
            <version>${classpath.scanner.version}</version>
        </dependency>
        <!--logging-->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-web</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <!--logging bridge-->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <!--logging facade-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <!--to string lib-->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${apache.commons.lang3.version}</version>
        </dependency>
        <!--main testing framework-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <!--Mocking-->
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>${powermock-module-junit4.version}</version>
            <scope>test</scope>
        </dependency>
        <!--PowerMock-mockito-->
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito</artifactId>
            <version>${powermock.api.mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.jmockit/jmockit -->
        <dependency>
            <groupId>org.jmockit</groupId>
            <artifactId>jmockit</artifactId>
            <version>${jmockit.version}</version>
            <scope>test</scope>
        </dependency>

        <!--useful library,like argument validation-->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${google.guava.version}</version>
        </dependency>
        <!--checker framework,
        provide type annotation like @Nonnull,
         for compile time validation-->
        <dependency>
            <groupId>org.checkerframework</groupId>
            <artifactId>checker-qual</artifactId>
            <version>${checker.framework.version}</version>
        </dependency>
        <dependency>
            <groupId>org.checkerframework</groupId>
            <artifactId>checker</artifactId>
            <version>${checker.framework.version}</version>
        </dependency>

        <!--logging required by Spring framework-->
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>${commons.logging.version}</version>
        </dependency>
        <dependency>
            <groupId>javax.el</groupId>
            <artifactId>javax.el-api</artifactId>
            <version>${javax.el.api.version}</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>javax.el</artifactId>
            <version>${javax.el.version}</version>
        </dependency>
        <!--Lombok project-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${project.lombok.version}</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <!--jmokit.version 1 exception resolver-->
            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-surefire-plugin</artifactId>-->
                <!--<version>${maven.surefire.plugin.version}</version>-->
                <!--<configuration>-->
                    <!--<argLine>-Djdk.attach.allowAttachSelf=true</argLine>-->
                <!--</configuration>-->
            <!--</plugin>-->

        </plugins>
    </build>

</project>